# fold_resize_images

./: .gitignore  Oldpyproject.toml.txt  README.md  pyproject.toml  resize_images.py  setup.py
.github/workflows/: publish-to-test-pypi.yml  run-tests.yml
src/: fold_resize_images.py
tests/: test_resize_images.py
