[project]
name = "fold_resize_images"
version = '{{VERSION_PLACEHOLDER}}'
description = "A simple tool to resize images in a directory."
authors = [
    { name = "Tadiello Sebastien", email = "sebastientadiello@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "Pillow"
]

[project.scripts]
fold-resize-images = "fold_resize_images:main"


[project.urls]
Homepage = "https://github.com/stadiello/fold_resize_images"
